--- a/Prueba_1_Udea_Esp.ipynb
+++ b/Prueba_1_Udea_Esp.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VxSS3yza3h3I"
+      },
       "source": [
         "## **Ejercicio 1** (50 pts)\n",
         "\n",
@@ -27,13 +16,15 @@
         "2. Comentarios y  documentación que sirva para quien deba usar la clase. **5 pts**.\n",
         "3. Pertinencia de la clase en el ámbito, ¿Por qué será útil esta herramienta y cómo ayudará a mejorar el negocio? esta será entregada en una celda de texto. **10 pts**.\n",
         "4. ¿Cree que se pueda construir una clase hija que ayude al proceso? Si sí constrúyala, sino, argumente por qué en una célda de código. **5 pts**."
-      ],
-      "metadata": {
-        "id": "VxSS3yza3h3I"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dIG8TZthTumH"
+      },
+      "outputs": [],
       "source": [
         "class Order:\n",
         "    \"\"\"\n",
@@ -93,26 +84,26 @@
         "        \"\"\"Calculates the total value of the order.\"\"\"\n",
         "        total = sum(self.products[product] * self.items[product] for product in self.products)\n",
         "        return total"
-      ],
-      "metadata": {
-        "id": "dIG8TZthTumH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Df7My8xsHDA5"
+      },
       "source": [
         "### 3. Pertinencia de la clase en el ámbito, ¿Por qué será útil esta herramienta y cómo ayudará a mejorar el negocio? esta será entregada en una celda de texto.\n",
         "\n",
         "La clase Pedido es útil para gestionar información sobre los pedidos, incluyendo detalles como el número del pedido, el cliente y los productos. Los métodos proporcionan funcionalidades para calcular el total del pedido, y los nuevos valores en caso de que tenga modificaciones. Esto puede ayudar a mejorar la eficiencia y organización del negocio"
-      ],
-      "metadata": {
-        "id": "Df7My8xsHDA5"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SKQbPztZWgqm"
+      },
+      "outputs": [],
       "source": [
         "# Class PremiumOrder\n",
         "class PremiumOrder(Order):\n",
@@ -127,21 +118,21 @@
         "            discount_total = previous_total * discount\n",
         "            total_with_discount = previous_total - discount_total\n",
         "            print(\"Un 25% de descuento fue aplicado\")\n",
-        "            print(f\"Previous total: {previous_total}\")\n",
-        "            print(f\"Total with discount: {total_with_discount}\")\n",
+        "            print(f\"Total anterior: {previous_total}\")\n",
+        "            print(f\"Total con descuento: {total_with_discount}\")\n",
         "            return total_with_discount\n",
         "        else:\n",
         "            print(\"El cliente no es elegible para descuento\")\n",
         "            return self.calculate_total()"
-      ],
-      "metadata": {
-        "id": "SKQbPztZWgqm"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "NUNZPtiDTyZb"
+      },
+      "outputs": [],
       "source": [
         "items = {\n",
         "    \"Leche\": 3000,\n",
@@ -163,15 +154,35 @@
         "    \"Santiago\", \"Sebastián\", \"Mateo\", \"Matías\", \"Nicolás\", \"Samuel\", \"Diego\", \"Daniel\", \"Juan José\", \"Emiliano\",\n",
         "    \"Valentina\", \"Sofía\", \"Isabella\", \"María José\", \"Camila\", \"Valeria\", \"Luciana\", \"Mariana\", \"Gabriela\", \"Alejandra\"\n",
         "]"
-      ],
-      "metadata": {
-        "id": "NUNZPtiDTyZb"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "11GYfRHcT2f-",
+        "outputId": "7add7bc3-7a81-4f3f-d5f4-8ce09575ab6b"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Un 25% de descuento fue aplicado\n",
+            "Previous total: 31500\n",
+            "Total with discount: 23625.0\n",
+            "Order #137256697789536 from Camila:\n",
+            "- Leche: 2\n",
+            "- Huevos: 1\n",
+            "- Cerveza: 1\n",
+            "- Pan: 1\n",
+            "Total: 23625.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Request the name of the customer\n",
         "customer_name = \"Camila\"\n",
@@ -191,35 +202,13 @@
         "# Display the order\n",
         "my_order.show_order()\n",
         "print(f\"Total: {total_order}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "11GYfRHcT2f-",
-        "outputId": "7add7bc3-7a81-4f3f-d5f4-8ce09575ab6b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Un 25% de descuento fue aplicado\n",
-            "Previous total: 31500\n",
-            "Total with discount: 23625.0\n",
-            "Order #137256697789536 from Camila:\n",
-            "- Leche: 2\n",
-            "- Huevos: 1\n",
-            "- Cerveza: 1\n",
-            "- Pan: 1\n",
-            "Total: 23625.0\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "86i69AUXAHt5"
+      },
       "source": [
         "## **Ejercicio 2** (50 pts)\n",
         "\n",
@@ -263,13 +252,41 @@
         "\\end{pmatrix}\n",
         "$$\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "86i69AUXAHt5"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uQgwTNK6XPL4",
+        "outputId": "ab7c5151-bc6f-40ea-a66c-937bb952a762"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x = -1.6774193548387097\n",
+            "y = -7.870967741935485\n",
+            "z = 5.129032258064516\n",
+            "w = 10.0\n",
+            "v = 1.4193548387096777\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "array([15.,  6., 11.,  8.,  7.])"
+            ]
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -295,50 +312,37 @@
         "\n",
         "# Verification\n",
         "np.dot(coefficients, solution)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uQgwTNK6XPL4",
-        "outputId": "ab7c5151-bc6f-40ea-a66c-937bb952a762"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "x = -1.6774193548387097\n",
-            "y = -7.870967741935485\n",
-            "z = 5.129032258064516\n",
-            "w = 10.0\n",
-            "v = 1.4193548387096777\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([15.,  6., 11.,  8.,  7.])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "2."
-      ],
       "metadata": {
         "id": "zkAwep84VhNE"
-      }
+      },
+      "source": [
+        "2."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z0BRdR0bXwkG",
+        "outputId": "d8fbaea5-0dc3-4bcb-e735-680f47f80ef5"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Eigenvalues of the matrix:\n",
+            "[5.23606798 0.76393202 1.        ]\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -351,37 +355,36 @@
         "# Print the eigenvalues\n",
         "print(\"Eigenvalues of the matrix:\")\n",
         "print(eigenvalues)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Z0BRdR0bXwkG",
-        "outputId": "d8fbaea5-0dc3-4bcb-e735-680f47f80ef5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Eigenvalues of the matrix:\n",
-            "[5.23606798 0.76393202 1.        ]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "3."
-      ],
       "metadata": {
         "id": "pfNUkvx_Vdhj"
-      }
+      },
+      "source": [
+        "3."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jmu76jwyX4bS",
+        "outputId": "9f8cf862-5bbc-4ee1-aa9a-f3711dc6b87d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Aproximación de e con 10 términos: 2.718281525573192\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -400,27 +403,29 @@
         "# Calculate an approximation of e by summing the inverses of the first 10 terms of the series\n",
         "e_approximated = euler_approx(10)\n",
         "print(\"Aproximación de e con 10 términos:\", e_approximated)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Jmu76jwyX4bS",
-        "outputId": "9f8cf862-5bbc-4ee1-aa9a-f3711dc6b87d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Aproximación de e con 10 términos: 2.718281525573192\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-VyJqKkmX9iF",
+        "outputId": "77b0fd4c-9c94-453e-d20c-4aa4b6f2ba01"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2.718281828459045\n",
+            "Número de términos necesarios para una precisión de 1e-05 decimales: 9\n",
+            "2.71828\n"
+          ]
+        }
+      ],
       "source": [
         "# Reference value\n",
         "true_euler_value = np.e\n",
@@ -439,26 +444,21 @@
         "\n",
         "# The number of terms required is approximately 9\n",
         "print(round(euler_approx(9),5))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-VyJqKkmX9iF",
-        "outputId": "77b0fd4c-9c94-453e-d20c-4aa4b6f2ba01"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.718281828459045\n",
-            "Número de términos necesarios para una precisión de 1e-05 decimales: 9\n",
-            "2.71828\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
