--- a/Prueba_2_Udea_Esp.ipynb
+++ b/Prueba_2_Udea_Esp.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "id": "4b9add1e-eb73-4aff-87f7-ff48606631be",
       "metadata": {
         "id": "4b9add1e-eb73-4aff-87f7-ff48606631be"
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "id": "f25e8958-fa52-4303-a3fd-40b26338cb84",
       "metadata": {
         "id": "f25e8958-fa52-4303-a3fd-40b26338cb84"
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "id": "3aa96f04-3725-45c0-9453-dc461484bc27",
       "metadata": {
         "id": "3aa96f04-3725-45c0-9453-dc461484bc27"
@@ -113,22 +113,23 @@
           "text": [
             "\n",
             "2. Filtrar filas con más de 2 intentos:\n",
-            "       name  score  attempts qualify\n",
-            "b     Dima    9.0         3      no\n",
-            "d    James   10.0         3      no\n",
-            "f  Michael   20.0         3     yes\n"
+            "         name  score  attempts qualify\n",
+            "c  Katherine   16.5         2     yes\n",
+            "f    Michael   20.0         3     yes\n",
+            "j      Jonas   19.0         1     yes\n"
           ]
         }
       ],
       "source": [
         "# 2. Filtre las filas donde el número de intentos (attempts) sea mayor que 2\n",
-        "filtered_attempts = df[df['attempts'] > 2]\n",
+        "mask_attempts = mask_score_range\n",
+        "filtered_attempts = df[mask_attempts]\n",
         "print(\"\\n2. Filtrar filas con más de 2 intentos:\\n\", filtered_attempts)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "id": "ada85bf3-0c13-4371-8854-b1620c755209",
       "metadata": {
         "id": "ada85bf3-0c13-4371-8854-b1620c755209"
@@ -149,13 +150,14 @@
       ],
       "source": [
         "# 3. Filtre las filas donde el 'score' se encuentre entre 15 y 20 (incluidos)\n",
-        "filtered_score_range = df[(df['score'] >= 15) & (df['score'] <= 20)]\n",
+        "mask_score_range = (df['score'] >= 15) & (df['score'] <= 20)\n",
+        "filtered_score_range = df[mask_score_range]\n",
         "print(\"\\n3. Filtrar filas donde el score está entre 15 y 20:\\n\", filtered_score_range)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "id": "efb0e2fc-9fd5-43c0-ab0c-a23d44eb98ed",
       "metadata": {
         "id": "efb0e2fc-9fd5-43c0-ab0c-a23d44eb98ed"
@@ -183,13 +185,13 @@
       ],
       "source": [
         "# 4. Cambie el 'score' en la fila 'd' a 11.5\n",
-        "df.at['d', 'score'] = 11.5\n",
+        "df.loc['d', 'score'] = 11.5\n",
         "print(\"\\n4. Cambiar el score en la fila 'd' a 11.5:\\n\", df)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "id": "372354a5-2c9d-4fbc-bde3-facdbcb81fd1",
       "metadata": {
         "id": "372354a5-2c9d-4fbc-bde3-facdbcb81fd1"
@@ -201,32 +203,30 @@
           "text": [
             "\n",
             "5. Agregar una nueva fila con etiqueta 'k':\n",
-            "           name  score  attempts qualify\n",
-            "a    Anastasia   12.5         1     yes\n",
-            "b         Dima    9.0         3      no\n",
-            "c    Katherine   16.5         2     yes\n",
-            "d        James   11.5         3      no\n",
-            "e        Emily    9.0         2      no\n",
-            "f      Michael   20.0         3     yes\n",
-            "g      Matthew   14.5         1     yes\n",
-            "h        Laura   12.0         1      no\n",
-            "i        Kevin    8.0         2      no\n",
-            "j        Jonas   19.0         1     yes\n",
-            "k  New Student   17.5         2     yes\n"
+            "         name  score  attempts qualify\n",
+            "a  Anastasia   12.5         1     yes\n",
+            "b       Dima    9.0         3      no\n",
+            "c  Katherine   16.5         2     yes\n",
+            "d      James   11.5         3      no\n",
+            "e      Emily    9.0         2      no\n",
+            "f    Michael   20.0         3     yes\n",
+            "g    Matthew   14.5         1     yes\n",
+            "h      Laura   12.0         1      no\n",
+            "i      Kevin    8.0         2      no\n",
+            "j      Jonas   19.0         1     yes\n",
+            "k      Alice   15.0         2     yes\n"
           ]
         }
       ],
       "source": [
         "# 5. Agregue una nueva fila con etiqueta 'k' al dataframe con un valor que usted desee para cada columna\n",
-        "new_row_data = {'name': 'New Student', 'score': 17.5, 'attempts': 2, 'qualify': 'yes'}\n",
-        "new_row_df = pd.DataFrame(new_row_data, index=['k'])\n",
-        "df = pd.concat([df, new_row_df])\n",
+        "df.loc['k'] = ['Alice', 15.0, 2, 'yes']\n",
         "print(\"\\n5. Agregar una nueva fila con etiqueta 'k':\\n\", df)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "id": "1d94e894-aacb-406f-abcc-9dbafb1eef9f",
       "metadata": {
         "id": "1d94e894-aacb-406f-abcc-9dbafb1eef9f"
@@ -254,13 +254,13 @@
       ],
       "source": [
         "# 6. Borre la fila 'k' y entregue nuevamente el DataFrame original\n",
-        "df = df.drop('k')\n",
+        "df = df.drop('k', axis = 0)\n",
         "print(\"\\n6. Borrar la fila 'k':\\n\", df)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "d8227cc7",
       "metadata": {},
       "outputs": [
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 21,
       "id": "024bba28",
       "metadata": {},
       "outputs": [
@@ -305,20 +305,21 @@
             "         name  score  attempts  qualify\n",
             "a  Anastasia   12.5         1     True\n",
             "b       Dima    9.0         3    False\n",
-            "e      Emily    9.0         2    False\n",
-            "d      James   11.5         3    False\n",
-            "j      Jonas   19.0         1     True\n",
             "c  Katherine   16.5         2     True\n",
-            "i      Kevin    8.0         2    False\n",
-            "h      Laura   12.0         1    False\n",
+            "d      James   11.5         3    False\n",
+            "e      Emily    9.0         2    False\n",
+            "f    Michael   20.0         3     True\n",
             "g    Matthew   14.5         1     True\n",
-            "f    Michael   20.0         3     True\n"
+            "h      Laura   12.0         1    False\n",
+            "i      Kevin    8.0         2    False\n",
+            "j      Jonas   19.0         1     True\n"
           ]
         }
       ],
       "source": [
         "# 8. Reemplace los valores de la columna 'qualify' que contiene los valores 'yes' y 'no' por los valores booleanos True y False respectivamente\n",
-        "df['qualify'] = df['qualify'].map({'yes': True, 'no': False})\n",
+        "replace = {\"yes\":True , \"no\":False}\n",
+        "df['qualify'] = df['qualify'].map(replace)\n",
         "print(\"\\n8. Reemplazar 'yes' y 'no' en la columna 'qualify' por True y False respectivamente:\\n\", df)"
       ]
     },
@@ -346,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "ed1937d5-3ca3-4508-bafc-c1238cae47b4",
       "metadata": {
         "id": "ed1937d5-3ca3-4508-bafc-c1238cae47b4"
