Read CSV from github

--- a/entrega/UdeMy.ipynb
+++ b/entrega/UdeMy.ipynb
@@ -303,7 +303,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "udemy_data = pd.read_csv('udemy_courses.csv')\n",
+    "udemy_data = pd.read_csv('https://raw.githubusercontent.com/Jeff-z3/especializacion_udea/main/entrega/udemy_courses.csv')\n",
     "\n",
     "udemy_data.info() \n",
     "udemy_data"
